--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,11 @@
 	"browser_action": {
 		"default_icon": "mspa_face.gif"
 	},
+	"background": {
+		"scripts": [
+			"background.js"
+		],
+		"persistent": true
+	},
 	"manifest_version": 2
 }
