--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,21 @@
 {
 	"name": "MSPA Update Notifier",
 	"version": "1.0",
+	"icons": {
+		"48": "48.png"
+	},
 	"browser_action": {
 		"default_icon": "mspa_face.gif"
 	},
 	"background": {
-		"scripts": [
-			"background.js"
-		],
+		"scripts": ["background.js"],
 		"persistent": true
 	},
 	"permissions": [
 		"tabs",
+		"notifications",
 		"http://mspaintadventures.com/*"
 	],
+	"web_accessible_resources": ["48.png"],
 	"manifest_version": 2
 }
