--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
 		"scripts": ["background.js"],
 		"persistent": true
 	},
+	"options_page": "options.html",
 	"permissions": [
 		"tabs",
 		"notifications",
