Encapsulating user settings and persistent memory to more easily port to other platforms down the road, and/or utilize other technologies under-the-hood (e.g. chrome.storage.local, chrome.storage.sync)

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,7 +8,7 @@
 		"default_icon": "mspa_face.gif"
 	},
 	"background": {
-		"scripts": ["background.js"],
+		"scripts": ["settings.js", "memory.js", "background.js"],
 		"persistent": true
 	},
 	"options_page": "options.html",
