--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -8,7 +8,7 @@
 		"default_icon": "mspa_face.gif"
 	},
 	"background": {
-		"scripts": ["settings.js", "memory.js", "background.js"],
+		"scripts": ["settings.js", "memory.js", "version.js", "background.js"],
 		"persistent": true
 	},
 	"options_page": "options.html",
