Adding short_name and description to manifest.

--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,5 +1,7 @@
 {
 	"name": "MSPA Update Notifier",
+	"short_name": "MSPA Notifier",
+	"description": "MSPA Notifier keeps track of your spot on MSPaintAdventures.com and notifies you of new updates.",
 	"version": "1.1.2",
 	"icons": {
 		"48": "48.png"
