--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
-	"name": "MSPA Notifier",
-	"description": "MSPA Notifier keeps track of your spot on MSPaintAdventures.com and notifies you of new updates.",
+	"name": "Homestuck Notifier",
+	"description": "Homestuck Notifier keeps track of your spot on Homestuck.com and notifies you of new updates.",
 	"version": "1.4.2",
 	"icons": {
 		"16": "mspa_face-16.png",
