--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -14,11 +14,6 @@
 			"settings.js",
 			"memory.js",
 			"version.js",
-
-			"lib/firebase-app-v5.10.0.js",
-			"lib/firebase-messaging-v5.10.0.js",
-			"fcm.js",
-
 			"background.js"
 		],
 		"persistent": true
@@ -29,9 +24,9 @@
 		"notifications",
 		"contextMenus",
 		"*://*.mspaintadventures.com/*",
-		"https://www.homestuck.com/*"
+		"https://www.homestuck.com/*",
+		"gcm"
 	],
 	"web_accessible_resources": ["48.png"],
-	"manifest_version": 2,
-	"gcm_sender_id": "103953800507"
+	"manifest_version": 2
 }
