--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -4,7 +4,9 @@
 	"version": "1.4.2",
 	"icons": {
 		"16": "icons/16.png",
-		"48": "icons/48.png"
+		"32": "icons/32.png",
+		"48": "icons/48.png",
+		"128": "icons/128.png"
 	},
 	"browser_action": {
 		"default_icon": "icons/16.png"
