--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -9,7 +9,10 @@
 		"128": "icons/128.png"
 	},
 	"browser_action": {
-		"default_icon": "icons/16.png"
+		"default_icon": {
+			"16": "icons/16.png",
+			"32": "icons/32.png"
+		}
 	},
 	"background": {
 		"scripts": [
