--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Homestuck Notifier",
-	"description": "Homestuck Notifier keeps track of your spot on Homestuck.com and notifies you of new updates.",
+	"description": "Keeps track of your spot on Homestuck.com and notifies you of updates (such as The Epilogues).",
 	"version": "1.4.2",
 	"icons": {
 		"16": "icons/16.png",
@@ -25,13 +25,12 @@
 	},
 	"options_page": "options.html",
 	"permissions": [
-		"tabs",
-		"notifications",
 		"contextMenus",
-		"*://*.mspaintadventures.com/*",
-		"https://www.homestuck.com/*",
-		"gcm"
+		"gcm",
+		"notifications",
+		"tabs",
+		"https://www.homestuck.com/*"
 	],
-	"web_accessible_resources": ["icons/48.png"],
+	"web_accessible_resources": ["icons/48.png", "icons/128.png"],
 	"manifest_version": 2
 }
