--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -32,5 +32,6 @@
 		"https://www.homestuck.com/*"
 	],
 	"web_accessible_resources": ["icons/48.png", "icons/128.png"],
+	"minimum_chrome_version": "62",
 	"manifest_version": 2
 }
