Remove 'NEW' from ext name, peeps know what's up by now.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"name": "NEW Homestuck Notifier",
+	"name": "Homestuck Notifier",
 	"description": "Notifies you of updates to Homestuck.com (such as The Epilogues) & keeps track of your progress.",
 	"version": "2.0.0",
 	"icons": {
